fixed spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,7 +9,7 @@
     background: linear-gradient(to right, #4c5698f0, #16222A);; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .part2 {
@@ -17,7 +17,8 @@
     background: -webkit-linear-gradient(to right, #FFFFFF, #ffe799);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #FFFFFF, #ffe799); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     width: 100%;
-    height: 100vh;
+    // height: 100vh;
+    // min-height: 100vh;
 }
 
 .part3 {
@@ -27,9 +28,7 @@
     
     width: 100%;
 }
-.part4 {
 
-}
 .credit {
     text-align: center;
     font-family: 'Quicksand', sans-serif;
@@ -61,7 +60,7 @@ hr {
 }
 .about {
     width: 250px;
-    height: 250px;
+    // height: 250px;
     padding-top: 20px;
 }
 .picture-circle {
